# fhi_manipulator_control_stack

./: .gitmodules  README.md
0_fhi_manipulator_control/: CMakeLists.txt  README.md  package.xml
0_fhi_manipulator_control/include/fhi_manipulator_control/: controller_core.hpp  parameters.hpp
0_fhi_manipulator_control/include/fhi_manipulator_control/utils/: limits_handler.hpp  performance_constrainer.hpp
0_fhi_manipulator_control/src/: controller_core.cpp  parameters.cpp
1_fhi_robot_dynamic_library/: CMakeLists.txt  README.md  package.xml
1_fhi_robot_dynamic_library/include/fhi_robot_dynamic_library/: chain.hpp  chain_state.hpp  module.hpp
1_fhi_robot_dynamic_library/launch/: tests.launch.py
1_fhi_robot_dynamic_library/scripts/: generate_chain_configuration.py
1_fhi_robot_dynamic_library/src/: chain.cpp
1_fhi_robot_dynamic_library/tests/: dyn_functions_test.cpp  run.sh
1_fhi_robot_dynamic_library/tests/data/franka_fixed_joint/: chain_config.yaml  franka.urdf
1_fhi_robot_dynamic_library/tests/data/franka_fixed_joint/gt/: C.csv  g.csv  tau.csv  x.csv
1_fhi_robot_dynamic_library/tests/data/franka_fixed_joint/input/: ddq.csv  dq.csv  q.csv
1_fhi_robot_dynamic_library/tests/data/franka_fixed_joint_fk_link7/: chain_config.yaml
1_fhi_robot_dynamic_library/tests/data/franka_fixed_joint_fk_link7/gt/: C.csv  dJ.csv  g.csv  tau.csv  x.csv
1_fhi_robot_dynamic_library/tests/data/franka_fixed_joint_fk_link7/input/: ddq.csv  dq.csv  q.csv
2_backend_controllers/cartesian_impedance_controller/: CMakeLists.txt  package.xml
2_backend_controllers/cartesian_impedance_controller/include/cartesian_impedance_controller/: controller_core.hpp
2_backend_controllers/cartesian_impedance_controller/src/: controller_core.cpp
2_backend_controllers/gravity_compensation_controller/: CMakeLists.txt  package.xml
2_backend_controllers/gravity_compensation_controller/include/gravity_compensation_controller/: controller_core.hpp
2_backend_controllers/gravity_compensation_controller/src/: controller_core.cpp
2_backend_controllers/robust_controller/: .gitmodules  CMakeLists.txt  package.xml  setup.py
2_backend_controllers/robust_controller/include/robust_controller/: controller_core.hpp
2_backend_controllers/robust_controller/ndof_robust_controller/: CMakeLists.txt  README.md
2_backend_controllers/robust_controller/ndof_robust_controller/data/: ModularBot_6DOF.json  PINO_4dof_experiments.json  PINO_yeee.json  franka_no_tool.json  robust_controller_config.json
2_backend_controllers/robust_controller/ndof_robust_controller/include/: matlab_interface.h  robust_controller.hpp  utils.hpp
2_backend_controllers/robust_controller/ndof_robust_controller/src/: controller_test.cpp  matlab_interface.cpp  robust_controller.cpp
2_backend_controllers/robust_controller/ndof_robust_controller/src/parameterTuning/: FFTImplementationCallback.cpp  FFTImplementationCallback.h  buildInfo.mat  combineVectorElements.cpp  combineVectorElements.h  fft.cpp  fft.h  linspace.cpp  linspace.h  parameterTuning.cpp  parameterTuning.h  parameterTuning_data.cpp  parameterTuning_data.h  parameterTuning_initialize.cpp  parameterTuning_initialize.h  parameterTuning_terminate.cpp  parameterTuning_terminate.h  parameterTuning_types.h  rtw_proj.tmw  rtwtypes.h
2_backend_controllers/robust_controller/ndof_robust_controller/src/robustController/: buildInfo.mat  minOrMax.cpp  minOrMax.h  prodMatMatInt.cpp  prodMatMatInt.h  recursiveNEurdf.cpp  recursiveNEurdf.h  recursiveNEurdfIA.cpp  recursiveNEurdfIA.h  robustControllerURDF.cpp  robustControllerURDF.h  robustControllerURDF_data.cpp  robustControllerURDF_data.h  robustControllerURDF_initialize.cpp  robustControllerURDF_initialize.h  robustControllerURDF_terminate.cpp  robustControllerURDF_terminate.h  robustControllerURDF_types.h  rtw_proj.tmw  rtwtypes.h
2_backend_controllers/robust_controller/src/: controller_core.cpp
2_backend_controllers/robust_controller/src/robust_controller_parameter_generator/: __init__.py  __main__.py  objects.py  parameters.py  utils.py
