<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fhi_manipulator_control</name>
  <version>0.0.1</version>
  <description>ROS2 FHI manipulator control package</description>
  <maintainer email="marco.magri@fraunhofer.it">Marco Magri</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>fhi_robot_dynamic_library</depend>

  <export>
  </export>
</package>