<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gravity_compensation_controller</name>
  <version>0.0.1</version>
  <description>FHI gravity_compensation_controller core package</description>
  <maintainer email="marco.magri@fraunhofer.it">Marco Magri</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>fhi_manipulator_control</depend>

  <export>
  </export>
</package>